[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/view/effects/Effects.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/view/popup_menus/pause_menu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/view/hud/Hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game/view/popup_menus/game_over_menu/GameOverMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/game/view/popup_menus/restart_menu/RestartMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/game/view/GameView.gd" type="Script" id=6]

[node name="VerticalGame" type="Node"]
script = ExtResource( 6 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.784314, 0.984314, 0.913725, 1 )

[node name="GuiAreaControl" type="Control" parent="."]
anchor_left = 0.03
anchor_top = 0.05
anchor_right = 0.97
anchor_bottom = 0.99

[node name="RectangleRatioContainer" type="AspectRatioContainer" parent="GuiAreaControl"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 0.5

[node name="Control" type="Control" parent="GuiAreaControl/RectangleRatioContainer"]
margin_right = 282.0
margin_bottom = 564.0

[node name="HudControl" type="Control" parent="GuiAreaControl/RectangleRatioContainer/Control"]
anchor_right = 1.0
anchor_bottom = 0.055

[node name="Hud" parent="GuiAreaControl/RectangleRatioContainer/Control/HudControl" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EffectsControl" type="Control" parent="GuiAreaControl/RectangleRatioContainer/Control"]
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 0.11

[node name="Effects" parent="GuiAreaControl/RectangleRatioContainer/Control/EffectsControl" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FieldControl" type="Control" parent="GuiAreaControl/RectangleRatioContainer/Control"]
anchor_top = 0.11
anchor_right = 1.0
anchor_bottom = 0.61

[node name="ColorRect" type="ColorRect" parent="GuiAreaControl/RectangleRatioContainer/Control/FieldControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.447059 )

[node name="BottomControl" type="Control" parent="GuiAreaControl/RectangleRatioContainer/Control"]
anchor_top = 0.62
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverMenu" parent="GuiAreaControl/RectangleRatioContainer/Control/BottomControl" instance=ExtResource( 4 )]
visible = false
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="PauseMenu" parent="GuiAreaControl/RectangleRatioContainer/Control/BottomControl" instance=ExtResource( 2 )]
visible = false
anchor_bottom = 1.0

[node name="RestartMenu" parent="GuiAreaControl/RectangleRatioContainer/Control/BottomControl" instance=ExtResource( 5 )]
visible = false
anchor_bottom = 1.0
